Model Branch & Version API complete impl
