# packages/server/middlewares/validate_model_branch.go
@@ -1,23 +1,26 @@
 package middlewares
 
 import (
+	_ "fmt"
 	"net/http"
 
 	ds "github.com/PureML-Inc/PureML/server/datastore"
 	"github.com/PureML-Inc/PureML/server/models"
 	"github.com/labstack/echo/v4"
+	uuid "github.com/satori/go.uuid"
 )
 
 func ValidateModelBranch(next echo.HandlerFunc) echo.HandlerFunc {
 	return func(context echo.Context) error {
 		branchName := context.Param("branchName")
 		modelName := context.Param("modelName")
+		orgId := uuid.Must(uuid.FromString(context.Param("orgId")))
 		if branchName == "" {
 			context.Response().WriteHeader(http.StatusBadRequest)
 			context.Response().Writer.Write([]byte("Branch name required"))
 			return nil
 		}
-		branch, err := ds.GetBranchByName(modelName, branchName)
+		branch, err := ds.GetBranchByName(orgId, modelName, branchName)
 		if err != nil {
 			context.Response().WriteHeader(http.StatusInternalServerError)
 			context.Response().Writer.Write([]byte(err.Error()))
